--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+
     <title>Davi Vilaça Dev</title>
 </head>
 <body>
