--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <br>
 
         <br>
+
         <div>
         <h2>Hororcraft website</h2>
         <a href="https://github.com/davimouravilaca/horrorcraft">
@@ -87,7 +88,7 @@
         </b>
         </a>
         <p class="lead">
-            Rede-socialforúm para compartilhamento de contos de terror sendo desenvolvido em php puro e bancde de dados MySQL.
+            Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e bancde de dados MySQL.
           </p>
         </div>
 
