--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <br>
 
         <div>
-        <h2>Hororcraft website</h2>
+        <h2><strong>Hororcraft website</strong></h2>
         <a href="https://github.com/davimouravilaca/horrorcraft">
         <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu">
         </b>
