--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         <div>
             <h2><strong>Hororcraft website</strong></h2>
             <a href="https://github.com/davimouravilaca/horrorcraft">
-            <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu">
-            </b>
+                <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu" style="max-width: 50%;">
             </a>
-            <p class="lead text-center>">
+            <p class="lead text-center" style="max-width: 50%">
                 Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e bancde de dados MySQL.
-              </p>
+            </p>
+            </div>            
         </div>
 
         <h3> Email: <strong>davimouravilaca@gmail.com</strong> </h3>
