--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         <br>
 
         <div>
-            <h2><strong>Hororcraft website</strong></h2>
+            <h3><strong>Hororcraft website</strong></h3>
             <a href="https://github.com/davimouravilaca/horrorcraft">
                 <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu" style="max-width: 50%;">
             </a>
-            <p class="lead text-center" style="max-width: 50%">
+            <p class="lead" style= "max-width: 50%">
                 Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e bancde de dados MySQL.
             </p>
             </div>            
