--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         <br>
 
         <div>
-            <h3><strong>Hororcraft website</strong></h3>
+            <h1><strong>Hororcraft website</strong></h3>
             <a href="https://github.com/davimouravilaca/horrorcraft">
                 <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu" style="max-width: 50%;">
             </a>
-            <p class="lead" style= "text-align:center; max-width:50%">
+            <p class="lead" style= "text-align:center; max-width:50%" class="shadow border border-3">
                 Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e bancde de dados MySQL.
             </p>
         </div>            
