--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         
         </div>
 
-        <div class "text-center mt-5">
+        <div class ="text-center mt-5">
         <h3> Email: <strong>davimouravilaca@gmail.com</strong> </h3>
         <h3> Github: <strong><a href="https://github.com/davimouravilaca">davimouravilaca</a></strong></h3>
         <a href="https://github.com/davimouravilaca">
