--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <a href="https://github.com/davimouravilaca/horrorcraft">
                 <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu" style="max-width: 50%;">
             </a>
-            <p class="lead" style= "text-align:center; max-width:50%" class="shadow border border-3">
+            <p class="lead shadow border border-3" style="text-align:center; max-width:50%; margin:auto;">
                 Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e bancde de dados MySQL.
-            </p>
+            </p>            
         </div>            
         
         </div>
