--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img src="horrorcraft.png" alt="logotipo com desenho do ctuhlu" style="max-width: 75%;">
             </a>
             <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
-                Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e banco de de dados MySQL.
+                Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e banco de dados MySQL.
             </p>            
         </div>            
         
