Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
             <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
                 Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e banco de dados MySQL.
             </p>            
+        </div>  
+
+      <div>
+            <a href="https://github.com/davimouravilaca/horrorcraft">
+                <img src="https://files.fm/f/f4u3hzzevs" alt="logotipo com desenho de cadeado" style="max-width: 75%;">
+            </a>
+            <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
+                Gerador de senhas responsivo feito inteiramente em Bootstrap com PHP puro usando chamadas AJAX para interação cliente-servidor.
+            </p>            
         </div>            
         
         </div>
