--- a/index.html
+++ b/index.html
@@ -97,10 +97,23 @@
             <a href="https://github.com/davimouravilaca/password-generator">
 
 <br>
+<div>
                 <img src="https://i.ibb.co/Xp9GRmr/Inserir-um-t-tulo-20240527-115654-0000.png" alt="logotipo com desenho de cadeado" style="max-width: 75%;">
             </a>
             <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
                 Gerador de senhas responsivo feito inteiramente em Bootstrap com PHP puro usando chamadas AJAX para interação cliente-servidor.
+            </p>            
+        </div>     
+
+<br>
+
+<div>
+
+   <a href="https://github.com/davimouravilaca/nuclear-winterhell">
+                <img src="https://i.ibb.co/xMS8rfq/Nuclear-Winterhell-20240527-121009-0000.png" alt="logotipo com símbolo de radiação" style="max-width: 75%;">
+            </a>
+            <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
+                Jogo com temática pós apocalíptica baseada em Mas Max e Fallout sendo desenvolvido na engine RPG Maker VX Ace com a linguagem Ruby.
             </p>            
         </div>            
         
