--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <img src="https://i.ibb.co/xMS8rfq/Nuclear-Winterhell-20240527-121009-0000.png" alt="logotipo com símbolo de radiação" style="max-width: 75%;">
             </a>
             <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
-                Jogo com temática pós apocalíptica baseada em Mas Max e Fallout sendo desenvolvido na engine RPG Maker VX Ace com a linguagem Ruby.
+                Game pós apocalíptico baseado em Mad Max e Fallout sendo desenvolvido no RPG Maker VX Ace com a linguagem Ruby.
             </p>            
         </div>            
         
