--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
 
         <div class ="text-center mt-5">
         <h3> Email: <strong>davimouravilaca@gmail.com</strong> </h3>
+
+<h3> Whatsapp: <strong><a href="https://wa.me/5531996928699" (31)996928699</strong></h3>
+
         <h3> Github: <strong><a href="https://github.com/davimouravilaca">davimouravilaca</a></strong></h3>
         <a href="https://github.com/davimouravilaca">
         <img width="50" src="https://user-images.githubusercontent.com/25181517/192108374-8da61ba1-99ec-41d7-80b8-fb2f7c0a4948.png" alt="GitHub" title="GitHub"/>
