Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class ="text-center mt-5">
         <h3> Email: <strong>davimouravilaca@gmail.com</strong> </h3>
 
-<h3> Whatsapp: <strong><a href="https://wa.me/5531996928699"> (31)996928699</a></strong></h3>
+<h3> Whatsapp: <strong><a href="https://wa.me/5531996928699"> (31)99692-8699</a></strong></h3>
 
         <h3> Github: <strong><a href="https://github.com/davimouravilaca">davimouravilaca</a></strong></h3>
         <a href="https://github.com/davimouravilaca">
