--- a/index.html
+++ b/index.html
@@ -21,10 +21,37 @@
 </head>
 <body>
 
+    <nav class="navbar fixed-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#home">Davi Vilaça</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#tecnologias">Tecnologias</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#projetos">Projetos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contato">Contato</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
 <br>
 
+
+
 <div class="container-sm text-center">
-    <h1 class="display-3">Davi Moura Lopes Vilaça</h1>
+    <h1 id="home" class="display-3">Davi Moura Lopes Vilaça</h1>
     <hr class="custom-hr">
     <img src="davi.jpg" alt="Davi Vilaça" class="shadow rounded-circle border border-3 border-white m-3" height="200">
     <p class="lead">analista de sistemas; back-end & full-stack dev</p>
@@ -40,7 +67,7 @@
         </figure>
 
         
-            <h2 class="display-5">Tecnologias</h2>
+            <h2 id="tecnologias" class="display-5">Tecnologias</h2>
            <br>
            <div>
             <div class="tecnologias">
@@ -79,7 +106,7 @@
         </div> 
         
         <br>
-        <h2 class="display-5">Projetos e contato</h2>
+        <h2 id="projetos" class="display-5">Projetos</h2>
         <br>
 
         <br>
@@ -94,7 +121,7 @@
         </div>  
 
 
-<!--
+
       <div>
             <a href="https://github.com/davimouravilaca/password-generator">
 
@@ -117,11 +144,13 @@
             <p class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
                 Game pós apocalíptico baseado em Mad Max e Fallout sendo desenvolvido no RPG Maker VX Ace com a linguagem Ruby.
             </p>            
-        </div>            
- -->       
+        </div>                  
         </div>
 
+
+
         <div class ="text-center mt-5">
+            <h2 id="contato" class="display-5">Contato</h2>
         <h3> Email: <strong>davimouravilaca@gmail.com</strong> </h3>
 
 <h3> Whatsapp: <strong><a href="https://wa.me/5531996928699"> (31)99692-8699</a></strong></h3>
