Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 <body>
 
+<p id="home"></p>
+
     <nav class="navbar fixed-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#home">Davi Vilaça</a>
@@ -51,7 +53,7 @@
 
 
 <div class="container-sm text-center">
-    <h1 id="home" class="display-3">Davi Moura Lopes Vilaça</h1>
+    <h1 class="display-3">Davi Moura Lopes Vilaça</h1>
     <hr class="custom-hr">
     <img src="davi.jpg" alt="Davi Vilaça" class="shadow rounded-circle border border-3 border-white m-3" height="200">
     <p class="lead">analista de sistemas; back-end & full-stack dev</p>
