Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 
 <h3> Whatsapp: <strong><a href="https://wa.me/5531996928699"> (31)99692-8699</a></strong></h3>
 
+<h3> LinkedIn: <strong><a href="https://www.linkedin.com/in/davi-vilaca-dev?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_ap"</strong></h3>
+
         <h3> Github: <strong><a href="https://github.com/davimouravilaca">davimouravilaca</a></strong></h3>
         <a href="https://github.com/davimouravilaca">
         <img width="50" src="https://user-images.githubusercontent.com/25181517/192108374-8da61ba1-99ec-41d7-80b8-fb2f7c0a4948.png" alt="GitHub" title="GitHub"/>
