--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div id="home"></div>
 
-    <nav class="navbar fixed-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+    <nav class="navbar fixed-top navbar-expand-lg border-bottom border-body" style="background-color: #cccccc">
         <div class="container-fluid">
           <a class="navbar-brand" href="#home">Davi Vilaça</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +123,7 @@
         </div>  
 
 
-
+<!--
       <div>
             <a href="https://github.com/davimouravilaca/password-generator">
 
@@ -149,7 +149,7 @@
         </div>                  
         </div>
 
-
+-->
 
         <div class ="text-center mt-5">
             <h2 id="contato" class="display-5">Contato</h2>
