Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 
       <div>
-            <a href="password-generator/">
+            <a href="password-generator/index.html">
 
 <br>
 <div>
