--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <br>
        <h3> Email: <strong>davimouravilaca@gmail.com</strong> </h3>
 
-<h3> Whatsapp: <strong><a href="https://wa.me/5531996928699"> (31)99692-8699</a></strong></h3>
+<h3> Whatsapp: <strong><a href="https://wa.me/5515996339102"> (15)99633-9102</a></strong></h3>
 
 <h3> LinkedIn: <strong><a href="https://www.linkedin.com/in/davi-vilaca-dev?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_ap">Davi Moura</a></strong></h3>
 
@@ -246,7 +246,7 @@
 </div>
     
 <footer class="text-center mt-5">
-    <p>&copy; <?=date("Y")?> Davi Vilaça Dev. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Davi Vilaça Dev. Todos os direitos reservados.</p>
 </footer>
 
 
