--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </figure>
 
         
-            <h2 id="tecnologias" class="display-5">Tecnologias</h2>
+            <h2 id="tecnologias" class="display-5">Main Stacks</h2>
            <br>
            <div>
             <div class="tecnologias">
@@ -98,8 +98,8 @@
                         <div>
                                 <img width="50" src="https://user-images.githubusercontent.com/25181517/183570228-6a040b9f-3ddf-47a2-a201-743121dac664.png" alt="php" title="php"/>
 
-                                <img width="40" src="https://user-images.githubusercontent.com/25181517/183423507-c056a6f9-1ba8-4312-a350-19bcbc5a8697.png" alt="Python" title="Python"/>
-
+                                <img width="50" src="https://raw.githubusercontent.com/marwin1991/profile-technology-icons/refs/heads/main/icons/rust.png" alt="Rust" title="Rust"/>
+                                
                                 <img width="50" src="https://user-images.githubusercontent.com/25181517/183896128-ec99105a-ec1a-4d85-b08b-1aa1620b2046.png" alt="MySQL" title="MySQL"/>
                 </div></div>
                 <div class="col-md-3">
