--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   
 
             <h2 class="lead shadow border border-3" style="text-align:center; max-width:75%; margin:auto;">
-                Rede-social/forúm para compartilhamento de contos de terror sendo desenvolvido em PHP puro e banco de dados MySQL.
+                Rede-social/forúm para compartilhamento de histórias sendo desenvolvido em PHP puro e banco de dados MySQL.
             </h2>            
         </div>  
 
