--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-1" id="exampleModalLabel">Em desenvolvimento</h1>
+                <p>Endereço: <a href="https://www.horrorcraft.com.br"></a></p>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
