--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-1" id="exampleModalLabel">Em desenvolvimento</h1>
-                <p>Endereço: <a href="https://www.horrorcraft.com.br"></a></p>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -196,6 +195,7 @@
             <div class="modal-footer d-flex justify-content-center">
                 <a href="https://www.facebook.com/horrorcraftwebsite" type="button" class="btn btn-primary">Facebook <img src="facebook.svg" style="max-width: 20px; height: auto;" alt=""></a>
                 <a href="https://github.com/davimouravilaca/horrorcraft" type="button" class="btn btn-secondary">Github <img src="github.png" style="max-width: 20px; height: auto;" alt=""></a>
+                <a href="https://www.horrorcraft.com.br" type="button" class="btn btn-success">Nosso Site <img src="horrorcraft.png" style="max-width: 20px; height: auto;" alt=""></a>
             </div>
         </div>
     </div>
