--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="modal-footer d-flex justify-content-center">
                 <a href="https://www.facebook.com/horrorcraftwebsite" type="button" class="btn btn-primary">Facebook <img src="facebook.svg" style="max-width: 20px; height: auto;" alt=""></a>
                 <a href="https://github.com/davimouravilaca/horrorcraft" type="button" class="btn btn-secondary">Github <img src="github.png" style="max-width: 20px; height: auto;" alt=""></a>
-                <a href="https://www.horrorcraft.com.br" type="button" class="btn btn-success">Nosso Site <img src="horrorcraft.png" style="max-width: 20px; height: auto;" alt=""></a>
+                <a href="https://www.horrorcraft.com.br" type="button" class="btn btn-success">Nosso Site <img src="https://icons.iconarchive.com/icons/microsoft/fluentui-emoji-mono/128/Octopus-icon.png" style="max-width: 20px; height: auto;" alt=""></a>
             </div>
         </div>
     </div>
